--- a/frontend/src/css/PromptSaver.css
+++ b/frontend/src/css/PromptSaver.css
@@ -18,7 +18,8 @@
 }
 
 .prompt-card {
-    display: flex;   
+    display: flex;
+    flex-direction: column;
     background-color: #333333;
     padding: 1rem;
     border-radius: 8px;
@@ -49,14 +50,30 @@
     word-break: break-word;
 }
 
+/* 전송 버튼 */
+.save-btn {
+    background-color: #0066ff;
+    color: white;
+    padding: 0.6rem 1.2rem;
+    margin: 0 5rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+  
+.save-btn:hover {
+    background-color: #004ecc;
+}
+
 .delete-btn-container {
-    /* display: flex;
-    justify-content: flex-end; */
-    text-align: right;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .delete-btn {
     margin-top: 0.5rem;
+    align-items: flex-end;
     background-color: #e03131;
     border: 1px solid #e03131;
     color: white;
@@ -64,7 +81,6 @@
     padding: 4px 6px;
     border-radius: 4px;
     cursor: pointer;
-    align-self: flex-start;
 }
 
 .delete-btn:hover {
