버튼 UI 수정, 파라미터 값 모두 삭제 시 발생하는 Nan 문제 해결

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -51,6 +51,12 @@ body {
   background-color: var(--card-bg);
 }
 
+.settings-container {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .layout {
   display: flex;
   flex: 1;
@@ -84,6 +90,7 @@ body {
   margin: 1rem 0;
 }
 
+/* 버튼 */
 /* 전송 버튼 */
 .send-btn {
   background-color: #0066ff;
@@ -106,6 +113,84 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-top: 1rem;
+}
+
+/* 설정 버튼 */
+.settings-btn {
+  background-color: #c7c7c7;
+  color: rgb(32, 32, 32);
+  padding: 6px 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+
+.settings-btn:hover {
+  background-color: #e9e9e9;
+}
+
+/* 전송 버튼 */
+.save-btn {
+    background-color: #0066ff;
+    color: white;
+    padding: 0.6rem 1.2rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+  
+.save-btn:hover {
+    background-color: #004ecc;
+}
+
+/* 불러오기 버튼 */
+.load-btn {
+  align-items: flex-end;
+  background: white;
+  border: 1px solid #333333;
+  color: var(--foreground);
+  font-size: 0.8rem;
+  padding: 4px 6px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.load-btn:hover {
+  border-color: #888;
+  background: #aaa;
+  color: white;
+}
+
+[data-theme="black"] .load-btn {
+  background: #ddd;
+  border: 1px solid #666;
+  color: black;
+}
+
+[data-theme="black"] .load-btn:hover {
+  border-color: #333;
+  background: white;
+  color: black;
+}
+
+/* 삭제 버튼 */
+.delete-btn {
+  margin-top: 0;
+  align-items: flex-end;
+  background-color: #e03131;
+  border: 1px solid #e03131;
+  color: white;
+  font-size: 0.8rem;
+  padding: 4px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.delete-btn:hover {
+  background-color: #ffbcbc;
+  color: #e03131;
 }
 
 .footer {
