--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -39,7 +39,7 @@ body {
 .page {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 96vh;
 }
 
 .header {
@@ -76,6 +76,13 @@ body {
   flex: 1;
   padding: 2rem;
   overflow-y: auto;
+}
+
+.prompt-input {
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  height: 100px;
 }
 
 /* 입력창 안내 */
@@ -117,9 +124,9 @@ body {
 
 /* 설정 버튼 */
 .settings-btn {
-  background-color: #c7c7c7;
-  color: rgb(32, 32, 32);
-  padding: 6px 8px;
+  background: #dfdfdf;
+  color: #323232;
+  padding: 6px 12px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -127,7 +134,22 @@ body {
 }
 
 .settings-btn:hover {
+  background: #e9e9e9;
+}
+
+[data-theme="black"] .settings-btn {
+  background: #848484;
+  color: #f5f5f5;
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
+
+[data-theme="black"] .settings-btn:hover {
   background-color: #e9e9e9;
+  color: black;
 }
 
 /* 전송 버튼 */
